- implémentation de l'action « vider l'historique » - affichage/masquage dnamique du bouton « fermer tous les onglets de contexte » - exploration authentification via Jpa (CorpusJpaAuthenticationProvider + test)

--- a/web/src/main/webapp/index.zul
+++ b/web/src/main/webapp/index.zul
@@ -28,7 +28,7 @@
 		</tabs>
 		
 		<toolbar>
-	        <toolbarbutton id="boutonFermerTousLesOnglets" image="/images/fermerOnglet.png" tooltiptext="fermer tous les onglets"/>
+	        <toolbarbutton visible="false" id="boutonFermerTousLesOnglets" image="/images/fermerOnglet.png" tooltiptext="Fermer tous les onglets de contexte"/>
     	</toolbar>
 		
 		
