--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -1,4 +1,5 @@
 <?page id="contextePage" title="Web corpus - Contextes" contentType="text/html;charset=UTF-8"?>
+<?taglib uri="http://www.zkoss.org/zkspring/security" prefix="sec"?>
 <zk>
 	<window id="contexteWindow" border="none" width="100%" height="100%"
 		apply="com.servicelibre.zk.controller.ContexteCtrl">
@@ -176,9 +177,11 @@
 					<div align="left" width="680px">
 						<label id="infoRésultats"
 							style="font-style:italic;text-align:center;" />
-						<a id="cooccurrentLien" visible="false">
-							cooccurrents
-						</a>
+						<zk if="${sec:isAllGranted('ROLE_BETA')}">
+							<a id="cooccurrentLien">
+								cooccurrents
+							</a>
+						</zk>
 					</div>
 					<div align="right">
 						<!-- 							<image id="exportationCsv"	src="/images/csv.png" class="cliquable"/> -->
