--- a/web/src/main/webapp/admin/attributionRôles.zul
+++ b/web/src/main/webapp/admin/attributionRôles.zul
@@ -2,11 +2,11 @@
 
 <zk>
 
-	<window id="adminRôlesWindow" border="none" width="100%" height="100%">
+	<window id="adminAttributionRôlesWindow" border="none" width="100%" height="100%">
 		
 		
 			<div>
-				  <textbox value="gestion des rôles (à venir)"></textbox>
+				  <textbox value="gestion de l'attribution des rôles (à venir)"></textbox>
 			</div>
 		
 		<!-- 
