--- a/web/src/main/webapp/ficheMot.zul
+++ b/web/src/main/webapp/ficheMot.zul
@@ -1,24 +1,111 @@
 <?page id="ficheMotPage" title="Web corpus - fiche mot" contentType="text/html;charset=UTF-8"?>
 <zk>
-	<window id="ficheMotWindow" border="none" width="100%" height="100%">
-		<div align="center" style="margin:10px;">
-			<label sclass="titre3"
-				value="Fiche du mot «&#xA0;${requestScope.mot.mot}&#xA0;»" />
+	<window id="ficheMotWindow" border="none" width="100%"
+		height="100%" apply="com.servicelibre.zk.controller.FicheMotCtrl">
+		<div align="center" style="margin:10px;" width="100%"> 
+			<label id="titreFicheLabel" sclass="titre3"
+				value="" />
 		</div>
-	
-		<div align="center" style="margin:10px;">
-			<textbox value="${requestScope.mot.mot}" readonly="true"/>
-			<textbox value="${requestScope.mot.lemme}" readonly="true"/>
-			<textbox value="${requestScope.mot.catgram}" readonly="true"/>
-			<textbox value="${requestScope.mot.genre}" readonly="true"/>
-			<textbox value="${requestScope.mot.nombre}" readonly="true"/>
-			<textbox value="${requestScope.mot.catgramPrécision}" readonly="true"/>
-			
-			<checkbox label="Lemme" checked="${requestScope.mot.estUnLemme}" disabled="true"/>
-			<checkbox label="RO" checked="${requestScope.mot.ro}" disabled="true"/>
-			<textbox value="${requestScope.mot.autreGraphie}" readonly="true"/>
-			
-			<textbox id="noteTextbox" multiline="true" cols="80" rows="10" disabled="true"/>
+
+		<div align="center" style="margin:10px;" width="100%">
+
+			<grid hflex="true" width="100%">
+				<columns>
+					<column width="120px" />
+					<column width="200px" />
+					<column width="300px" visible="false"/>
+				</columns>
+				<rows>
+					<row>
+						<label id="motLabel" value="Mot" />
+						<textbox id="motTextbox" readonly="true" value="${requestScope.mot.mot}" />
+						<label id="motMessage" value=""	style="color:red" />
+					</row>
+					<row>
+						<label id="lemmeLabel" value="Lemme" />
+						<textbox id="lemmeTextbox" readonly="true" value="${requestScope.mot.lemme}" />
+						<label id="lemmeMessage" value=""	style="color:red" />
+					</row>
+					<row>
+						<label id="catgramLabel" value="Classe de mot" />
+						<listbox id="catgramListbox" mold="select" disabled="true">
+							<listitem label="adj." value="adj."/>
+							<listitem label="adv." value="adv."/>
+							<listitem label="conj." value="conj."/>
+							<listitem label="dét." value="dét."/>
+							<listitem label="interj." value="interj."/>
+							<listitem label="n." value="n."/>
+							<listitem label="prép." value="prép."/>
+							<listitem label="pron." value="pron."/>
+							<listitem label="v." value="v."/>
+						</listbox>						
+						<label id="catgramMessage" value=""	style="color:red" />
+					</row>
+					<row>
+						<label id="genreLabel" value="Genre" />
+						<listbox id="genreListbox" mold="select" disabled="true">
+							<listitem label="" value=""/>
+							<listitem label="m." value="m."/>
+							<listitem label="f." value="f."/>
+						</listbox>
+						<label id="genreMessage" value=""	style="color:red" />
+					</row>
+					<row>
+						<label id="catgramPrécisionLabel" value="Précision" />
+						<listbox id="catgramPrécisionListbox" mold="select" disabled="true">
+							<listitem label="" value=""/>
+							<listitem label="et f." value="et f."/>
+							<listitem label="impers." value="impers."/>
+							<listitem label="ou f." value="ou f."/>
+							<listitem label="pron." value="pron."/>
+						</listbox>
+						<label id="catgramPrécisionMessage" value=""	style="color:red" />
+					</row>
+					<row>
+						<label id="nombreLabel" value="Nombre" />
+						<listbox id="nombreListbox" mold="select" disabled="true">
+							<listitem label="" value=""/>
+							<listitem label="inv." value="inv."/>
+							<listitem label="pl." value="pl."/>
+						</listbox>
+						<label id="nombreMessage" value=""	style="color:red" />
+					</row>
+					<row>
+						<label id="estUnLemmeLabel" value="Est un lemme?" />
+						<checkbox id="estUnLemmeCheckbox" label=""	checked="${requestScope.mot.estUnLemme}" disabled="true" />
+						<label id="estUnLemmeMessage" value=""	style="color:red" />
+					</row>
+					<row>
+						<label id="roLabel" value="Graphie RO?" />
+						<checkbox id="roCheckbox" label=""	disabled="true"/>
+						<label id="roMessage" value=""	style="color:red" />
+					</row>
+					
+					<row>
+						<label id="autreGraphieLabel" value="Autre graphie" />
+						<textbox id="autreGraphieTextbox" readonly="true" value="${requestScope.mot.autreGraphie}" />
+						<label id="autreGraphieMessage" value=""	style="color:red" />
+					</row>
+					
+					<row>
+						<label id="listePrimaireLabel" value="Liste primaire" />
+						<listbox id="listePrimaireListbox" mold="select" disabled="true"/>
+						<label id="listePrimaireMessage" value=""	style="color:red" />
+					</row>
+					
+					<row>
+						<label id="noteLabel" value="Notes" />
+						<textbox id="noteTextbox" value="${requestScope.mot.note}" multiline="true" cols="120" rows="10" readonly="true"/>
+						<label id="noteMessage" value=""	style="color:red" />
+					</row>					
+				</rows>
+			</grid>
+		
+			<button id="modifierButton" label="Modifier"/>
+			<button id="enregistrerButton" label="Enregistrer les modifications" disabled="true"/>
+			<button id="supprimerButton" label="Supprimer"/>
+			<button id="annulerButton" label="Annuler"/>
+		
 		</div>
 	</window>
 </zk>
