--- a/web/src/main/webapp/admin/listesEtMots.zul
+++ b/web/src/main/webapp/admin/listesEtMots.zul
@@ -16,7 +16,7 @@
 					<listhead sizable="true">
 						<listheader label="Id" width="40px" sort="auto(id)" visible="false"/>
 						<listheader label="Catégorie" width="100px" sort="auto(catégorie)"/>
-						<listheader label="Ordre" width="40px" sort="auto(ordre)"/>
+						<listheader label="Ordre" align="center" width="45px" sort="auto(ordre)"/>
 						<listheader label="Nom" align="center" width="240px" sort="auto(nom)"/>
 						<listheader label="Description" align="center" width="300px" sort="auto(description)"/>
 					</listhead>				  
@@ -110,12 +110,12 @@
 						  	<listcell label="@bind(item.genre)"/>
 						  	<listcell label="@bind(item.nombre)"/>
 						  	<listcell label="@bind(item.catgramPrécision)"/>
-						  	<listcell label="..." onClick="@command('afficherFicheMot', mot=item)"/>
+						  	<listcell label="..." onClick="@command('afficherFicheMot', mot=item)" tooltiptext="Ouvrir la fiche du mot « ${item.mot} »"/>
 						  </listitem>
 					  </template>
 				  </listbox>
 				  <hbox>
-				  		<button id="actionButton" label="Retirer les mots sélectionnés de la la liste" onClick="@command('confirmerSuppressionMots')" visible="@load(empty vm.mode)"/>
+				  		<button id="actionButton" label="Retirer les mots sélectionnés de la liste" onClick="@command('confirmerSuppressionMots')" visible="@load(empty vm.mode)"/>
 				  		<button id="ajouterMotButton" label="Ajouter un nouveau mot" onClick="@command('ajouterMot')" visible="@load(empty vm.mode)"/>
 				  </hbox>
 			</vbox>
