--- a/web/src/main/webapp/ficheMot.zul
+++ b/web/src/main/webapp/ficheMot.zul
@@ -12,8 +12,8 @@
 			<grid id="formulaireGrid" hflex="true" width="100%" visible="true">
 				<columns>
 					<column width="120px" />
-					<column width="200px" />
-					<column width="300px" visible="false"/>
+					<column  />
+					<column visible="false"/>
 				</columns>
 				<rows>
 					<row>
@@ -88,9 +88,15 @@
 					</row>
 					
 					<row>
-						<label id="listePrimaireLabel" value="Liste primaire" />
-						<listbox id="listePrimaireListbox" mold="select" disabled="true"/>
-						<label id="listePrimaireMessage" value=""	style="color:red" />
+						<label id="partitionLabel" value="Partition" />
+						<listbox id="partitionListbox" mold="select" disabled="true"/>
+						<label id="partitionMessage" value=""	style="color:red" />
+					</row>
+					
+					<row>
+						<label id="listesLabel" value="Fait partie des listes" />
+						<listbox id="listesListbox" disabled="true"/>
+						<label id="listesMessage" value=""	style="color:red" />
 					</row>
 					
 					<row>
